--- a/style.css
+++ b/style.css
@@ -1,9 +1,16 @@
 body, html{
     background-color: #ba4949;
-    height: 100%;
+    height: 80%;
     margin: 0;
 }
 
+#header{
+    text-align: center;
+    color: white;
+    font-weight: bold;
+    padding-bottom: 10px;
+
+}
 .wrapper{
     height: 100%;
     display: flex;
@@ -12,7 +19,8 @@ body, html{
 }
 
 .container{
-   padding: 80px; 
+   margin: 0px;
+   padding: 70px; 
    text-align: center;
    background-color: #c15c5c;
    border-radius: 3px;
@@ -57,6 +65,24 @@ body, html{
 
 .button_container:active{
     transform: translateY(1px);
+}
+
+#counter_container{
+    margin-top: 15px;
+    color: white;
+    text-align: center;
+    font-weight: bold;
+}
+
+#counter{
+    color: rgba(5, 4, 4, 0.763);
+}
+#alert{
+    color:rgb(0, 0, 0);
+    
+    font-weight: bold;
+    visibility: hidden;
+    
 }
 
 @media(max-width: 1025px)
